meecast (0.6) unstable; urgency=low

  * Fixed problem with GPS 
  * Fixed problem with green color for font in standby settings
  * Added items "15 minutues" and "One day" to Update period list
  * Added setting for Splash screen
  * Fixed problem with temperature in current day

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 15 Jul 2011 15:42:23 +0200

meecast (0.5.9) unstable; urgency=low

  * Added icons for hko.gov.hk
  * Fixed problem with day forecast in first start for hko.gov.hk
  * Fixed problem with switching to next day if today was selected first 
  * Increased speed for switching between stations
  * Added Chinese translation. Thanks Wong Man Kong, Michael  
  * Added splash for starting of application 
  * Painted icons for standby widget
  * Added icon and text description for foreca.com
  * Added button Donation to window "About"
  * Added short name for station Saint-Petersburg
  * Added setting for color of font in station name on standby screen 

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 15 Jul 2011 15:42:23 +0200

meecast (0.5.8) unstable; urgency=low

  * Added United States(Kentucky, Lousiana,Maine,Maryland,Massachusetts,
    Michigan, Minnesota, Mississippi, Missouri, Montana, Nebraska, Nevada, New Hampshire,
    New Jersey, New Mexico,New York, North Carolina, North Dakota) to foreca.com database 	
  * Added Slovenia to foreca.com database
  * Added icons for hko.gov.hk
  * Fixed problem with hko.gov.hk
  * Updated Chile for yr.no and foreca.com sources
  * Added icons for foreca.com 
  * Updated Russian translations
  * Removed region Australia in bom.gov.au source
  * Fixed problem with Finish localization for date 
  * Added current weather in second window
 
 -- Vlad Vasiliev <vlad@gas.by>  Wed, 30 May 2011 21:42:23 +0200

meecast (0.5.7) unstable; urgency=low

  * Added hours weather forecast for foreca.com source  
  * Fixed problem with temperature and icons in hours weather forecast in gismeteo.ru source